#545 fix: added a new state to configurator DTO to fix z-index issue

--- a/santa-fe/src/app/modules/core/containers/security-definition-configurator/security-definition-configurator.container.scss
+++ b/santa-fe/src/app/modules/core/containers/security-definition-configurator/security-definition-configurator.container.scss
@@ -337,6 +337,13 @@ $securityDefinitionConfigurator_ctas_height: 6rem;
       }
     }
   }
+  &--includesSelectedDefinitionState {
+    #{$blockName} {
+      &__definitions {
+        @include mix_fixed_div(relative, $z_index_hovering_item)
+      }
+    }
+  }
   &--filterActiveState {
     #{$blockName} {
       &__filters {
